[metadata]
name = wsl
version = 0.1.0
url = https://github.com/t-sakai-kure/WSL
author = Tomoya Sakai
license = file: LICENSE
description = Code for weakly supervised learning
long_description = file: README.md
install_requires = numpy;
classifiers =
  Intended Audience :: Developers
  Intended Audience :: Education
  Intended Audience :: Science/Research
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3.6
  Topic :: Software Development :: Libraries :: Python Modules


[options]
packages = find:
setup_requires = 
  flake8
  pytest-runner
tests_require = 
  pytest
  pytest-cov


[options.packages.find]
exclude =
  tests


[flake8]
filename = pywsl/*/*.py
max-line-length = 160
max-complexity = 10
exclude =
  tests


[aliases]
test = pytest


[tool:pytest]
addopts =
  --verbose
  --cov
  --cov-report=html:htmlcov/


[coverage:run]
branch = True
omit = 
  .eggs/*
  */__init__.py
  tests/*



