[metadata]
name = wsl
version = 0.1.0
url = https://github.com/t-sakai-kure/WSL
author = Tomoya Sakai
license = file: LICENSE
description = Code for weakly supervised learning
long_description = file: README.md
install_requires = numpy;
classifiers =
  Programming Language :: Python :: 3.6


[options]
packages = find:
setup_requires = pytest-runner
tests_require = 
  pytest
  pytest-cov


[options.packages.find]
exclude =
  tests


[aliases]
test = pytest


[tool:pytest]
addopts =
  --verbose
  --cov
  --cov-report=html:htmlcov/


[coverage:run]
omit = 
  .eggs/*
  */__init__.py



